--- a/projects/4/hyperparameters.ipynb
+++ b/projects/4/hyperparameters.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LogisticRegression(featuresCol=\"reviewVector\", labelCol=\"overall\", maxIter=5, regParam=0)\n",
+    "lr = LogisticRegression(featuresCol=\"reviewVector\", labelCol=\"overall\", regParam=0)\n",
     "count_vectorizer = CountVectorizer(inputCol=swr.getOutputCol(), outputCol=\"reviewVector\", binary=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,29 +335,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1.092174649833623,\n",
-       " 1.092174649833623,\n",
-       " 1.0921937014598986,\n",
-       " 1.092187520475758,\n",
-       " 1.0920426876340248,\n",
-       " 1.0922413098323918,\n",
-       " 1.0922585954738815,\n",
-       " 1.0922585954738815,\n",
-       " 1.092021400249171,\n",
-       " 1.0921777403013904]"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cvModel.avgMetrics "
    ]
@@ -402,18 +382,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "lr = LogisticRegression(featuresCol=\"reviewVector\", labelCol=\"overall\", maxIter=5, regParam=0)\n",
-    "count_vectorizer = CountVectorizer(inputCol=swr.getOutputCol(), outputCol=\"reviewVector\", binary=True, vocabSize=2500)"
+    "## Сравним по времени (5, 3000) и (10, 2500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression(featuresCol=\"reviewVector\", labelCol=\"overall\", maxIter=5, regParam=0)\n",
+    "count_vectorizer = CountVectorizer(inputCol=swr.getOutputCol(), outputCol=\"reviewVector\", binary=True, vocabSize=3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,25 +424,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 46.1 ms, sys: 23.8 ms, total: 69.9 ms\n",
+      "Wall time: 31.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "pipeline_model = pipeline.fit(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.056794398102202"
+       "1.1595389754660674"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipeline_model = pipeline.fit(train)\n",
     "predictions = pipeline_model.transform(test)\n",
     "rmse = evaluator.evaluate(predictions)\n",
     "rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = LogisticRegression(featuresCol=\"reviewVector\", labelCol=\"overall\", maxIter=10, regParam=0)\n",
+    "count_vectorizer = CountVectorizer(inputCol=swr.getOutputCol(), outputCol=\"reviewVector\", binary=True, vocabSize=2500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline(stages=[\n",
+    "    tokenizer,   \n",
+    "    swr,    \n",
+    "    count_vectorizer,\n",
+    "    assembler,\n",
+    "    lr\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 57.4 ms, sys: 10.4 ms, total: 67.9 ms\n",
+      "Wall time: 16.9 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "pipeline_model = pipeline.fit(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0894365388203096"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions = pipeline_model.transform(test)\n",
+    "rmse = evaluator.evaluate(predictions)\n",
+    "rmse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выбираем maxIter=10, regParam=0, vocabSize=2500, "
    ]
   },
   {
